# LCZ4py

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  diagnose_zenodo.py  interp_map.ipynb  pyproject.toml  pytest.ini  requirements.txt  test.py  test_general.ipynb  test_local.ipynb
.github/workflows/: publish.yml
.mimocode/: .cron-lock
LCZ4py/: __init__.py
LCZ4py/_internal/: __init__.py  _lcz_downloader_base.py  _lcz_grid_base.py  _lcz_grid_raster_base.py  _lcz_map_engine.py  adaptive_crop_mask.py  i18n_messages.py  lcz_parameters_data.py  lcz_theme.py  lcz_ts_utils.py
LCZ4py/general/: __init__.py  lcz_cal_area.py  lcz_cal_indexes.py  lcz_cal_indices.py  lcz_get_indices.py  lcz_get_lst.py  lcz_get_map.py  lcz_get_map_euro.py  lcz_get_map_generator.py  lcz_get_map_usa.py  lcz_get_parameters.py  lcz_get_planetary_computer.py  lcz_get_ucp.py  lcz_grid_chirps.py  lcz_grid_era5.py  lcz_grid_era5_global.py  lcz_grid_pdsi.py  lcz_grid_pollution_ghap.py  lcz_grid_pollution_merra2.py  lcz_plot_map.py  lcz_plot_parameters.py  plot_grid_only.py  plot_lcz_relationship.py
LCZ4py/local/: __init__.py  lcz_anomaly.py  lcz_anomaly_map.py  lcz_climate_compute_spei.py  lcz_climate_compute_spi.py  lcz_interp_eval.py  lcz_interp_map.py  lcz_interp_map_plus.py  lcz_krige.py  lcz_plot_interp.py  lcz_temporal.py  lcz_thermal.py  lcz_ts.py  lcz_uhi_intensity.py  lcz_uhi_surface.py  lcz_variogram.py
notebooks/: tutorial_lcz_grid_integration.ipynb
notebooks/general/: 01_map_acquisition.en.ipynb  (+13 more)
tests/: test_lcz4r.py  test_lcz_get_ucp_stack.py  test_lcz_grid.py
(+22 files in other folders)
